# HobbyGL

./: .gitignore  CMakeLists.txt
include/: Constants.h  Controls.h  Renderer.h  Sprite.h  Utils.h
scripts/: hello.lua
shaders/: simple.fs  simple.vs
src/: controls.cpp  main.c  main.cpp  renderer.cpp  shaders.c  shaders.cpp  shaders.h  sprite.cpp  utils.c  utils.cpp  utils.h
